--- a/web/Rails/Gemfile
+++ b/web/Rails/Gemfile
@@ -24,6 +24,8 @@ gem "tzinfo-data"
 
 gem "bootsnap", require: false
 
+gem 'faker', '~> 3'
+
 group :development, :test do
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 end
