--- a/main/41_yaml.yml
+++ b/main/41_yaml.yml
@@ -3,8 +3,9 @@
 key1: "Value 1"         # соотв тут key1: - ключ, а "Value 1" - строковое значение
 key2: Value 2           # строковое значение можно писать как в кавычках так и без них
 hello: bye
-  # some: some            # ? вложенные ключи почемуто не работают и выводит ошибку, потом проверить ?
-  # some2: some2
+some:
+  some1: some           # вложенные ключи
+  some2: some2
 key3:                   # одному ключу может соответсвовать не только одно, но и много значений сразу, тоесть массив значений
   - K3value 1
   - K3value 2
