--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ test4.rb
 barbershop.db
 pet_sobes/
 files/
+main/gems/gem_creating_fun_translations/coverage
+main/exeptions_testing/rspec_examples/coverage
