--- a/web/Docker/docker-compose.yml
+++ b/web/Docker/docker-compose.yml
@@ -49,7 +49,7 @@ services:
   django:                                               # сервис который у нас будет работать(и устанавливать) с питоном и джанга
     build: ./
     container_name: django                              # необязательная команда устанавливает название для контейнера
-    comand: python manage.py runserver 0.0.0.0:8000     # дополнительная команда, тут для запуска локального сервера(в Джанга есть предустановленный мы его сразу будем запускать). manage.py - спец фаил к которому мы обращаемся через питон и вызываем команду(тут runserver) 0.0.0.0 - локалхост
+    comand: python manage.py runserver 0.0.0.0:8000     # дополнительная команда, тут для запуска локального сервера(в Джанга есть предустановленный мы его сразу будем запускать). manage.py - спец фаил к которому мы обращаемся через Питон и вызываем команду(тут runserver) 0.0.0.0 - локалхост
     volumes:                                            # указываем тома за счет которых мы сможем соединить папку с хостмашины(сервера) с указанной нами папкой(тут текущей)
       - .:/usr/src/app                                  # связываем текущую папку с папкой которая прописана в WORKDIR(рабочая директория с хост машины которая будет находиться в контейнере). без этой нстройки не создастся фаил manage.py и другие
     ports:
