--- a/Rails/application/config/sidekiq.yml
+++ b/Rails/application/config/sidekiq.yml
@@ -3,6 +3,6 @@ development:
 production:
   :concurrency: <%= ENV['SIDEKIQ_CONCURRENCY'] || 15 %> # в продакшене либо считаем значение переменной среды либо поставим 15
 :queues:
-  - default    # будет только одна очередь выполнения с данным названием (можно создавать много очередей с разным приоритетом)
-  - scheduler  # например доп очередь для гема sidekiq-scheduler (deploy)
+  - default     # будет очередь выполнения с данным названием (можно создавать много очередей с разным приоритетом)
+  - scheduler   # например доп очередь для гема sidekiq-scheduler (deploy)
 :max_retries: 1 # сколько раз задача будет перевыполняться, при возникновении ошибок (по умолчанию 25)
